@@ -1,0 +1,7 @@
+# Документация к ardj
+
+Здесь будет вся новая документация к ardj, в формате Markdown.
+Просматривать удобнее всего через веб-интерфейс Bitbucket.
+
+Раньше документация была в Docbook, но её не очень удобно было поддерживать, поэтому она постоянно устаревала.
+Markdown писать гораздо проще.
