@@ -1,0 +1,23 @@
+body {
+	font: 14px/24px normal Ubuntu, Arial, sans-serif;
+	color: #333;
+	margin: 10px 50px;
+}
+
+h1 {
+	font-size: 2em;
+	font-weight: normal;
+}
+
+h2 {
+	font-size: 1.75em;
+	font-weight: normal;
+}
+
+pre {
+	padding: 10px;
+	background-color: #eee;
+	color: #666;
+	border: solid 1px #ccc;
+	border-radius: 5px;
+}
