@@ -1,3 +1,6 @@
+2015/02/17
+- Added queue docs.
+
 2014/09/22 (1.2.40)
 - Fixed wrong oggenc installation hint.
 - Fixed database initialization.
